# aoc-2024

./: .gitignore  LICENSE  justfile  pyproject.toml  shell.nix
puzzle01/: justfile  pyproject.toml
puzzle01/src/: main.py
puzzle02/: pyproject.toml
puzzle02/src/: main.py
puzzle02/src/test/: test_part1.py  test_part2.py
puzzles/day-01/: pyproject.toml
puzzles/day-01/src/day_01/: solution.py
puzzles/day-02/: pyproject.toml
puzzles/day-02/src/day_02/: __init__.py  solution.py
puzzles/day-03/: pyproject.toml
puzzles/day-03/src/day_03/: __init__.py
puzzles/day-06/: pyproject.toml
puzzles/day-06/src/day_06/: __init__.py  solution.py
puzzles/day-14/: pyproject.toml
puzzles/day-14/src/day_14/: __init__.py  solution.py
src/aoc_2024/: measure.py  vector.py
