[project]
name = "aoc-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Zasorin", email = "zasorin.alek@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
aoc-2024 = "aoc_2024:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["puzzles/day-03", "puzzles/day-02", "puzzles/day-01"]
