[project]
name = "day-06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Zasorin", email = "zasorin.alek@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
day-06 = "day_06:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
