[project]
name = "day-14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Zasorin", email = "zasorin.alek@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aoc-2024",
]

[project.scripts]
day-14 = "day_14:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
aoc-2024 = { workspace = true }
